Bug 122912 - Another CRASH: "Apply"->"Restart Now" if UI Langauge is changed in Tools->Options
Summary: Another CRASH: "Apply"->"Restart Now" if UI Langauge is changed in Tools->Op...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:6.3.0 target:6.2.1
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-24 00:55 UTC by himajin100000
Modified: 2019-01-28 11:06 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description himajin100000 2019-01-24 00:55:54 UTC
Description:
see steps to reproduce

Steps to Reproduce:
This problem is very similar to tdf#122846 and tdf#121180

1. Make sure you have two or more UI Locales.

Currently Win-x86_64@42 provides en_US only, and I did not check whether there are additional language packs for these nightlies
 
I often pass --with-lang="ja de" to autogen.sh when I make my own build.

2. Tools->Options From Start Center
3. LibreOfficeDev->Language Settings->Languages
4. User interface: English -> Japanese
5. Apply
6. Restart Now


Actual Results:
Crash

Expected Results:
No Crash


Reproducible: Always


User Profile Reset: No



Additional Info:
if Tools->Options is called NOT from Start Center(like Untitled), it doesn't crash. but it doesn't seem to restart either.

I tested with my own local build, so It's meaningless to provide build-id
Comment 1 Xisco Faulí 2019-01-24 09:05:03 UTC
Yep, reproduced in

Version: 6.3.0.0.alpha0+
Build ID: 0d46fb02f3f19d11db40b6c5335d78a3894502d7
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

I'll try to fix it...
Comment 2 Xisco Faulí 2019-01-24 09:15:13 UTC
Patch in gerrit -> https://gerrit.libreoffice.org/#/c/66846/
Comment 3 Commit Notification 2019-01-24 13:39:49 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/c81340bcc73144e082efb9fc575ef62b9b046ca4%5E%21

tdf#122912: Close option dialog if restart is confirmed ( part 2 )

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2019-01-28 11:06:18 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/6ba08959ab0e70a3dd50a4a88134ccf7a18710ca%5E%21

tdf#122912: Close option dialog if restart is confirmed ( part 2 )

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.