tdf#122912: Close option dialog if restart is confirmed ( part 2 )

forgot it in e961e08a3277158d4e3074bfacb8599296d2fa75

Change-Id: Id896bf407ca33faf0dbff74f3cbe98d23de0e0c7
Reviewed-on: https://gerrit.libreoffice.org/66846
Tested-by: Jenkins
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>